# ds3_python3_sdk

./: .gitignore  README.md  index.html  pyproject.toml  setup.py
docker/: Dockerfile  run_docker.rb  run_tests.sh
ds3/: ds3.py  ds3Helpers.py  ds3network.py
samples/: bulk_with_prefix.py  getBucket.py  getDataRange.py  getPhysical.py  getService.py  gettingData.py  getting_all_objects_in_bucket.py  getting_one_file_in_directory.py  listAll.py  multipartupload.py  puttingData.py  puttingDataWithCRC32.py  puttingDataWithMD5.py  putting_all_files_in_directory.py  putting_one_file_in_directory.py  renaming.py
sphinx/v3.4.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/v3.4.1/.doctrees/: environment.pickle  index.doctree
sphinx/v3.4.1/source/: conf.py  index.rst
sphinx/v5.0.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/v5.0.2/.doctrees/: environment.pickle  index.doctree
sphinx/v5.0.2/source/: conf.py
sphinx/v5.8.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/v5.8.1/.doctrees/: index.doctree
sphinx/v5.8.1/_sources/: index.txt
sphinx/v5.8.1/source/: conf.py  index.rst
tests/: clientTests.py  helpersTests.py
